Footer | Fix vertical alignment

--- a/src/assets/scss/spartan/custom/_type.scss
+++ b/src/assets/scss/spartan/custom/_type.scss
@@ -337,7 +337,7 @@ hr {
   font-family: Kreon;
   font-style: normal;
   font-weight: normal;
-  font-size: 24px;
+  font-size: 18px;
   line-height: 32px;
   /* identical to box height, or 133% */
 
